client/public/index.css
body, html {
  height: 100%;
  scroll-behavior: smooth;
}
.slide {
  height: 50%; 
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  position: relative;
}
.bg-img1 {
  background-image: url(./images/main_bg.png);
  height: 100%; 
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.bgTint {
  background-color: grey;
  background-blend-mode: multiply;
}

.item:after {
  content:"";
  position:absolute;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background:rgba(0,0,0,0.6);
}

.bg-img2 {
  background-image: url(./images/3DScene_Main.PNG);
  height: 100%; 
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.bg-img3 {
  background-image: url(./images/BBT.PNG);
  padding-top: 2%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.navbar{
  background-color: black;
  font-family: "Coolvetica";
  min-height: 60px;
}

.nav-link{
  color: white;
  font-size: larger;
}


#name_label {
  font-family: "Coolvetica";
  margin: auto;
  width: 50%;
  color: white;
  transform: translate(-50%, -50%);
}

#Name{
  font-size: 6em;
  text-shadow: 5px 2px 5px #000000;
}

.section-headers {
  font-family: "Coolvetica";
  color: white;
}

.center{
  text-align: center;
  margin: auto;
  width: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.header-center{
  text-align: center;
  margin: auto;
  width: 100%;
  position: relative;
  background-color: black;
}

.about-section{
  padding-top: 2%;
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.about-img{
  width: 50%;
  height: auto;
  border-radius: 50%;  
}

.para-style{
  font-family: "Coolvetica";
  color: white;
  font-size: larger;
  padding-top: 2%;
}

.caro-overlay{
  position: absolute;
  top: 15%;
}

.card .card-title{
  font-family: "Coolvetica";
  text-align: center;
}

.card .img-fit {
  aspect-ratio: 16/9;
  object-fit: cover;
}

.card {
  height: 100%;
}

.card-body {
  display: flex;
  height: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.card-text{
  flex-grow: 1;
}


@font-face {
  font-family: "Coolvetica";
  src: url(./fonts/coolvetica_rg.otf);
}

@media (max-width:767.98){
  .parallax {
    background-attachment: scroll;
  }

  .card .img-fit{
    aspect-ratio: 1.45/1;
  }
}

